--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,4 +5,92 @@
      
      
   </div>
-<hr>  <hr>  <hr>
+  <br>
+  
+<main>
+    <div class="container">
+        <div class="carousel slide" id="main-carousel" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#main-carousel" data-slide-to="0" class="active"></li>
+                <li data-target="#main-carousel" data-slide-to="1"></li>
+                <li data-target="#main-carousel" data-slide-to="2"></li>
+                <li data-target="#main-carousel" data-slide-to="3"></li>
+            </ol><!-- /.carousel-indicators -->
+            
+            <div class="carousel-inner">
+                <div class="carousel-item active" align="center">
+                    <img class="d-block img-fluid" src="https://www.unicef.org/nigeria/sites/unicef.org.nigeria/files/styles/two_column/public/VS_Borno_003.jpg?itok=tCkZdT5o" alt="">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h1>Mountain</h1>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block img-fluid" src="https://www.thecable.ng/wp-content/uploads/2018/01/Bauchi-students1-1280x720.jpg" alt="">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h3>Mountain</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci esse vitae exercitationem fugit, numquam minus!</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block img-fluid" src="https://www.thecable.ng/wp-content/uploads/2018/01/Bauchi-students1-1280x720.jpg" alt="">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h3>Mountain</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci esse vitae exercitationem fugit, numquam minus!</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="https://s19.postimg.cc/nenabzsnn/slide4.jpg" alt="" class="d-block img-fluid">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h3>Mountain</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci esse vitae exercitationem fugit, numquam minus!</p>
+                    </div>
+                </div>
+            </div><!-- /.carousel-inner -->
+            
+            <a href="#main-carousel" class="carousel-control-prev" data-slide="prev">
+                <span class="carousel-control-prev-icon"></span>
+                <span class="sr-only" aria-hidden="true">Prev</span>
+            </a>
+            <a href="#main-carousel" class="carousel-control-next" data-slide="next">
+                <span class="carousel-control-next-icon"></span>
+                <span class="sr-only" aria-hidden="true">Next</span>
+            </a>
+        </div><!-- /.carousel -->
+    </div><!-- /.container -->
+  <br>
+
+<footer class="container py-5">
+  <div class="row">
+    <div class="col-12 col-md">
+      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="d-block mb-2" role="img" viewBox="0 0 24 24"><title>Product</title><circle cx="12" cy="12" r="10"/><path d="M14.31 8l5.74 9.94M9.69 8h11.48M7.38 12l5.74-9.94M9.69 16L3.95 6.06M14.31 16H2.83m13.79-4l-5.74 9.94"/></svg>
+      <small class="d-block mb-3 text-muted">&copy; Cyber Fortress</small>
+       
+    </div>
+   
+    
+    <div class="col-6 col-md">
+      <h5>Resources</h5>
+      <ul class="list-unstyled text-small">
+        <li><a class="link-secondary" href="#">e-Learning</a></li>
+        <li><a class="link-secondary" href="#">Statistics</a></li>
+        <li><a class="link-secondary" href="#">Academic Calendar</a></li>
+        <li><a class="link-secondary" href="#">Portal</a></li>
+      </ul>
+    </div>
+    <div class="col-6 col-md">
+      <h5>Site map</h5>
+      <ul class="list-unstyled text-small">
+        <li><a class="link-secondary" href="#">Team</a></li>
+        <li><a class="link-secondary" href="#">Locations</a></li>
+        <li><a class="link-secondary" href="#">Privacy</a></li>
+        <li><a class="link-secondary" href="#">Terms</a></li>
+      </ul>
+    </div>
+  </div>
+</footer>
+
+
+    <script src="/docs/5.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+
+      
+  </body>
