--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,63 +7,45 @@
   </div>
   <br>
   
-<main>
-    <div class="container">
-        <div class="carousel slide" id="main-carousel" data-ride="carousel">
-            <ol class="carousel-indicators">
-                <li data-target="#main-carousel" data-slide-to="0" class="active"></li>
-                <li data-target="#main-carousel" data-slide-to="1"></li>
-                <li data-target="#main-carousel" data-slide-to="2"></li>
-                <li data-target="#main-carousel" data-slide-to="3"></li>
-            </ol><!-- /.carousel-indicators -->
-            
-            <div class="carousel-inner">
-                <div class="carousel-item active" align="center">
-                    <img class="d-block img-fluid" src="https://www.unicef.org/nigeria/sites/unicef.org.nigeria/files/styles/two_column/public/VS_Borno_003.jpg?itok=tCkZdT5o" alt="">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h1></h1>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block img-fluid" src="https://www.thecable.ng/wp-content/uploads/2018/01/Bauchi-students1-1280x720.jpg" alt="">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h3>Mountain</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci esse vitae exercitationem fugit, numquam minus!</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block img-fluid" src="https://www.thecable.ng/wp-content/uploads/2018/01/Bauchi-students1-1280x720.jpg" alt="">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h3>Mountain</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci esse vitae exercitationem fugit, numquam minus!</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="https://s19.postimg.cc/nenabzsnn/slide4.jpg" alt="" class="d-block img-fluid">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h3>Mountain</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci esse vitae exercitationem fugit, numquam minus!</p>
-                    </div>
-                </div>
-            </div><!-- /.carousel-inner -->
-            
-            <a href="#main-carousel" class="carousel-control-prev" data-slide="prev">
-                <span class="carousel-control-prev-icon"></span>
-                <span class="sr-only" aria-hidden="true">Prev</span>
-            </a>
-            <a href="#main-carousel" class="carousel-control-next" data-slide="next">
-                <span class="carousel-control-next-icon"></span>
-                <span class="sr-only" aria-hidden="true">Next</span>
-            </a>
-        </div><!-- /.carousel -->
-    </div><!-- /.container -->
-  <br>
+   <main role="main">
 
-<footer class="container py-5">
+     
+
+      <!-- Marketing messaging and featurettes
+      ================================================== -->
+      <!-- Wrap the rest of the page in another container to center all the content. -->
+
+      <div class="container marketing">
+
+        <!-- Three columns of text below the carousel -->
+        <div class="row">
+          <div class="col-lg-4">
+            <img class="rounded-circle" src="https://www.unicef.org/nigeria/sites/unicef.org.nigeria/files/styles/two_column/public/VS_Borno_003.jpg?itok=tCkZdT5o" alt="Generic placeholder image" width="400" height="400">
+           
+          </div><!-- /.col-lg-4 -->
+        
+          <div class="col-lg-4">
+            <img class="rounded-circle" src="https://www.thecable.ng/wp-content/uploads/2018/01/Bauchi-students1-1280x720.jpg" alt="Generic placeholder image" width="400" height="400">
+            
+          </div><!-- /.col-lg-4 -->
+      
+          <div class="col-lg-4">
+            <img class="rounded-circle" src="https://www.dateline.ng/wp-content/uploads/2021/02/Bauchi-780x422.jpg" alt="Generic placeholder image" width="400" height="400">
+            
+           
+          </div><!-- /.col-lg-4 -->
+        </div><!-- /.row -->
+
+
+        <!-- START THE FEATURETTES -->
+
+        <hr class="featurette-divider">
+
+       <footer class="container py-5">
   <div class="row">
     <div class="col-12 col-md">
-      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="d-block mb-2" role="img" viewBox="0 0 24 24"><title>Product</title><circle cx="12" cy="12" r="10"/><path d="M14.31 8l5.74 9.94M9.69 8h11.48M7.38 12l5.74-9.94M9.69 16L3.95 6.06M14.31 16H2.83m13.79-4l-5.74 9.94"/></svg>
-      <small class="d-block mb-3 text-muted">&copy; Cyber Fortress</small>
+     
+      <small class="d-block mb-3 text-muted">&copy; Bauchi State Ministry of Education</small>
        
     </div>
    
@@ -80,7 +62,7 @@
     <div class="col-6 col-md">
       <h5>Site map</h5>
       <ul class="list-unstyled text-small">
-        <li><a class="link-secondary" href="#">Team</a></li>
+        <li><a class="link-secondary" href="#">FAQs</a></li>
         <li><a class="link-secondary" href="#">Locations</a></li>
         <li><a class="link-secondary" href="#">Privacy</a></li>
         <li><a class="link-secondary" href="#">Terms</a></li>
@@ -88,9 +70,11 @@
     </div>
   </div>
 </footer>
-
-
-    <script src="/docs/5.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
-
-      
+<hr class="navbar-divider">
+      <!-- FOOTER -->
+      <footer class="container" align="center" >
+        <p class="float-right"><a href="#">Back to top</a></p>
+        <p align="center">2021 - Megaright Resources / Cyber Fortress. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+      </footer>
+    </main>
   </body>
